--- a/css/main.css
+++ b/css/main.css
@@ -7,46 +7,12 @@ body {
     font-family: Roboto;
 }
 
-li {
-    display: inline;
-}
-
-#first-links-list {
-    display: inline;
-    justify-content: flex-end;
-}
-
-#first-nav-bar {
-    background-color: black;
-    color: white;
-    display: inline;
-    list-style-type: none;
-}
-
-div ul{
-    display: inline;
-}
-
-#featured-shows {
-    display: flex;
-    color: white;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-
-}
-
-#april-header {
-    display: flex;
-    text-align: center;
-}
-
 #play-info {
     display: grid;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-    width: 80%;
+    width: 100%;
 }
 
 #map {
