--- a/css/main.css
+++ b/css/main.css
@@ -7,9 +7,13 @@ body {
     font-family: Roboto;
 }
 
+div ul{
+    display: inline;
+}
+
 #play-info {
     display: grid;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
     width: 100%;
@@ -17,29 +21,6 @@ body {
 
 #map {
     display: flex;
-}
-
-#contact-info {
-    display: flex;
-    flex-direction: column;
-}
-
-#shows {
-    display: flex;
-    flex-direction: column;
-    background-color: black;
-    color: white;
-    display: inline;
-    list-style-type: none;
-}
-
-#social {
-    display: flex;
-    flex-direction: column;
-    background-color: black;
-    color: white;
-    display: inline;
-    list-style-type: none;
 }
 
 li a {
@@ -51,45 +32,6 @@ li a {
 div a {
     display: inline;
     text-decoration: none;
-}
-
-#read-more-button {
-    display: flex;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: orange;
-    border: 1px solid black;
-    color: black;
-    padding: 10px 150px;
-    text-align: center;
-    text-decoration: none;
-    display: flex;
-    font-size: 16px;
-}
-
-span {
-    display: flex;
-    flex-direction: row;
-}
-
-#title {
-    display: flex;
-    flex-direction: row;
-}
-
-#dates {
-    display: flex;
-    flex-direction: row;
-}
-
-#location {
-    display: flex;
-    flex-direction: row;
-}
-
-#price {
-    display: flex;
-    flex-direction: row;
 }
 
 .card-title {
